# wiki-analysis

./: README.md  output.ipynb  pyproject.toml
module/: calculate_similarity.py  create_network.py  find_revert_back.py  visualise.py
